--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "strapi-plugin-navigation": "^3.0.5",
+    "strapi-plugin-vercel-deploy": "^1.4.0",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
